--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Webpage for Unit-2-02</title>
+  <title>Webpage for Unit-2-02</title>
 </head>
 
 <body>
@@ -10,6 +10,6 @@
 	<p>Hello, World!</p>
 	<a href="https://trh.ocsb.ca/">Trinity Website</a>
 	<img src="https://sites.google.com/a/ocsb.ca/trh/_/rsrc/1508768071530/our-school/Holy%20Trinity%201.jpg?height=211&width=320">
-  <p style="color:red;">This is a red sentance</p>
-      </body>
+  <p style="color:blue;">This is a red sentence</p>
+</body>
 </html>
