--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-  <title>Webpage for Unit-2-02</title>
-</head>
+  <head>
+    <title>Webpage for Unit-2-02</title>
+  </head>
 
-<body>
-  <h1>Webpage for Unit-2-02</h1>
-	<p>Hello, World!</p>
-	<a href="https://trh.ocsb.ca/">Trinity Website</a>
-	<img src="https://sites.google.com/a/ocsb.ca/trh/_/rsrc/1508768071530/our-school/Holy%20Trinity%201.jpg?height=211&width=320">
-  <p style="color:blue;">This is a red sentence</p>
-</body>
+  <body>
+    <h1>Webpage for Unit-2-02</h1>
+	  <p>Hello, World!</p>
+	  <a href="https://trh.ocsb.ca/">Trinity Website</a>
+	  <img src="https://sites.google.com/a/ocsb.ca/trh/_/rsrc/1508768071530/our-school/Holy%20Trinity%201.jpg?height=211&width=320" alt="Holy trinity catholic highschool">
+    <p style="color:blue;">This is a red sentence</p>
+  </body>
 </html>
