--- a/index.html
+++ b/index.html
@@ -6,10 +6,16 @@
   </head>
 
   <body>
-    <h1>Webpage for Unit-2-02</h1>
+    <h1>_Webpage for Unit-2-02_</h1>
+    <h6>This is very small</h6>
 	  <p>Hello, World!</p>
+    <p>This       has a lot    of spaces   in the source             code but the program        ignores      it</p>
+    <p>Line breaks<br> for<br> everyone </p>
 	  <a href="https://trh.ocsb.ca/">Trinity Website</a>
 	  <img src="https://sites.google.com/a/ocsb.ca/trh/_/rsrc/1508768071530/our-school/Holy%20Trinity%201.jpg?height=211&width=320" alt="Holy trinity catholic highschool">
-    <p style="color:blue;">This is a red sentence</p>
+    <p style="color:blue;">The text below just says "Hello, there." It's the Wingdings font.</p>
+    <body style="background-color:#dddfff;">
+
+    <p style="font-family:wingdings;font-size:500%;color:red;text-align:center;background-color:black;"> Hello, there.</p>
   </body>
 </html>
